Fix overflow bug

--- a/wp-content/themes/portfolio/public/sass/index.scss
+++ b/wp-content/themes/portfolio/public/sass/index.scss
@@ -210,6 +210,7 @@
 
     h1 {
       padding-left: 5.2em;
+      margin-bottom: 3em;
     }
 
     header {
@@ -223,8 +224,12 @@
 
     main {
       padding: 0 calc(10em + 2em + 2px);
-      overflow: hidden;
       position: relative;
+      overflow: hidden;
+
+      #go_back {
+        margin-top: 0.75em;
+      }
 
       div#not_validate, div#validate {
         right: 12em;
@@ -327,7 +332,7 @@ body {
     background-color: $dark_purple_color;
   }
 
-  &.projects_body_class {
+  &.projects_body_class, &.projects_item_body_class {
     background-color: $dark_green_color;
   }
 }
@@ -539,8 +544,6 @@ input#toggle {
 }
 
 #go_back {
-  visibility: visible;
-
   &_button {
     font-family: 'Proxima-Regular', 'Gotham-Regular', sans-serif;
     font-size: $base_font_size;
@@ -1361,8 +1364,8 @@ main {
         &:after {
           content: '';
           position: absolute;
-          bottom: -20%;
-          left: 45%;
+          bottom: -2em;
+          left: 50%;
           border-left: 10px solid transparent;
           border-right: 10px solid transparent;
           border-top: 20px solid $white_color;
